--- a/RBTech/WebContent/WEB-INF/web.xml
+++ b/RBTech/WebContent/WEB-INF/web.xml
@@ -19,4 +19,14 @@
     <servlet-name>rest</servlet-name>
     <url-pattern>/</url-pattern>
   </servlet-mapping>
+  <context-param>
+		<param-name>contextConfigLocation</param-name>
+		<param-value>/WEB-INF/rest-servlet.xml</param-value>
+	</context-param>
+ 
+	<listener>
+		<listener-class>
+                      org.springframework.web.context.ContextLoaderListener
+                </listener-class>
+	</listener>
 </web-app>
