--- a/RBTech/WebContent/WEB-INF/web.xml
+++ b/RBTech/WebContent/WEB-INF/web.xml
@@ -21,7 +21,7 @@
   </servlet-mapping>
   <context-param>
 		<param-name>contextConfigLocation</param-name>
-		<param-value>/WEB-INF/rest-servlet.xml</param-value>
+		<param-value>/WEB-INF/rest-servlet.xml, /WEB-INF/spring-config.xml</param-value>
 	</context-param>
  
 	<listener>
@@ -29,4 +29,13 @@
                       org.springframework.web.context.ContextLoaderListener
                 </listener-class>
 	</listener>
+	<filter>
+		<filter-name>springSecurityFilterChain</filter-name>
+		<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+	</filter>
+ 
+	<filter-mapping>
+		<filter-name>springSecurityFilterChain</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
 </web-app>
